--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="uno">
         <div class="caja-central">
             <div class="caja-cara">
-                <img class="cara" src="Fotocara.jpg" alt="Maxi Programa">            
+                <img class="cara" src="fotocara.png" alt="Maxi Programa">            
             </div>
             <div class="caja-presentacion">
                 <div>    
